fix: make tables scroll on horizontal overflow

--- a/src/app/components/Section.module.css
+++ b/src/app/components/Section.module.css
@@ -71,6 +71,8 @@
   width: 100%;
   border-collapse: collapse;
   margin: 1rem 0;
+  display: block;
+  overflow-x: auto;
 }
 
 .container table>thead>tr>th,
@@ -78,10 +80,6 @@
   padding: 0.5rem;
   text-align: left;
   border-bottom: 1px solid #0b3766;
-}
-
-.container table>tbody>tr>td:last-child {
-  word-break: break-word;
 }
 
 .container table>thead>tr>th {
